Hero section background, header and lead

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,7 @@
  */
 /* Document
    ========================================================================== */
+@import url("https://fonts.googleapis.com/css?family=Raleway");
 html {
   font-family: sans-serif;
   /* 1 */
@@ -407,7 +408,7 @@ template {
 
 .gigantic, .huge, .large, .bigger, .big,
 h1, h2, h3, h4, h5, h6 {
-  color: #BD5248;
+  color: black;
   font-weight: bold; }
 
 .gigantic {
@@ -417,12 +418,12 @@ h1, h2, h3, h4, h5, h6 {
 
 .huge, h1 {
   font-size: 68px;
-  line-height: 1.05;
-  letter-spacing: -1px; }
+  text-align: center;
+  line-height: 1.2; }
 
 .large, h2 {
   font-size: 42px;
-  line-height: 1.14; }
+  line-height: 1.2; }
 
 .bigger, h3 {
   font-size: 26px;
@@ -453,12 +454,12 @@ hr {
   height: 0; }
 
 a {
-  color: #BD5248;
+  color: black;
   text-decoration: none;
   outline: 0; }
 
 a:hover, a:focus {
-  color: #d89993; }
+  color: #333333; }
 
 ::-moz-selection {
   background: #FFF498; }
@@ -482,10 +483,91 @@ body {
   -webkit-tap-highlight-color: #FFF498; }
 
 body {
-  background: #F6F6F8;
+  background: white;
   font-size: 14px;
-  line-height: 1.6;
-  font-family: 'Open Sans' sans-serif;
+  font-family: 'Raleway', sans-serif;
   color: #2E2D33;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%; }
+
+section.hero {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  height: 100vh;
+  background-image: url(../img/hero-2.jpg);
+  background-position: center center;
+  background-size: cover; }
+  section.hero .hero-content {
+    margin: 0 30px; }
+    section.hero .hero-content h1 {
+      font-size: 68px;
+      color: #fff;
+      margin-top: 0px; }
+    section.hero .hero-content h2 {
+      font-size: 30px;
+      font-weight: normal;
+      color: #fff;
+      text-align: center; }
+  @media (max-width: 790px) {
+    section.hero .hero-content h1 {
+      font-size: 52px; }
+    section.hero .hero-content h2 {
+      font-size: 24px; } }
+  @media (max-width: 412px) {
+    section.hero .hero-content h1 {
+      font-size: 36px; }
+    section.hero .hero-content h2 {
+      font-size: 17px; } }
+
+.flex {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row; }
+
+.flex-center {
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
+
+.flex-around {
+  -webkit-justify-content: space-around;
+      -ms-flex-pack: distribute;
+          justify-content: space-around; }
+
+.order-first {
+  -webkit-box-ordinal-group: 0;
+  -webkit-order: -1;
+      -ms-flex-order: -1;
+          order: -1; }
+
+.col-1 {
+  max-width: 300px;
+  margin: 0 10px; }
+
+.col-2 {
+  max-width: 1000px;
+  margin: 0 30px; }
+
+@media (max-width: 640px) {
+  .flex {
+    display: block; }
+  .col-1 {
+    max-width: 100%; } }
