--- a/assets/css/1-base/_base.sass
+++ b/assets/css/1-base/_base.sass
@@ -12,12 +12,13 @@ h1, h2, h3, h4, h5, h6
 
 .huge, h1
   font-size: 68px
-  line-height: 1.05
-  letter-spacing: -1px
+  text-align: center
+  line-height: 1.2
+  //letter-spacing: -0.5px
 
 .large, h2
   font-size: 42px
-  line-height: 1.14
+  line-height: 1.2
 
 .bigger, h3
   font-size: 26px
@@ -87,8 +88,8 @@ body
 body
   background: $bg-color
   font-size: 14px
-  line-height: 1.6
-  font-family: 'Open Sans' sans-serif
+  //line-height: 1.6
+  font-family: 'Raleway', sans-serif
   color: $text-color
   -webkit-font-smoothing: antialiased
   -webkit-text-size-adjust: 100%
