--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,5 +1,10 @@
 @import "0-tools/normalize";
 @import "0-tools/bourbon/bourbon";
+@import "0-tools/fonts";
 
 @import "1-base/vars";
 @import "1-base/base";
+
+@import "3-sections/hero";
+
+@import "4-layouts/home";
