--- a/assets/css/3-sections/hero.sass
+++ b/assets/css/3-sections/hero.sass
@@ -1,25 +1,47 @@
 section.hero
     display: flex
+    flex-direction: column
     align-items: center
     justify-content: center
     width: 100%
     height: 100vh
+    min-height: 430px
     background:
         image: url(../img/hero-2.jpg)
         position: center center
         size: cover
     .hero-content
         margin: 0 30px
+        text-align: center
         h1
             font-size: 68px
             color: #fff
             margin-top: 0px
+            margin-bottom: 0px
         h2
             font-size: 30px
-            font-weight: normal
+            font-weight: lighter
             color: #fff
             text-align: center
-    @media (max-width: 790px)
+        .hero-buttons
+            margin-top: 70px
+        .contact-button
+            font-size: 18px
+            font-weight: normal
+            letter-spacing: 1px
+            color: #fff
+            text-align: center
+            padding: 10px 30px
+            border: 2px solid white
+            border-radius: 50px
+            transition: all 0.3s ease-in-out
+            cursor: pointer
+        .contact-button:hover
+            font-weight: bold
+            color: #4a4c4f
+            background: #fff
+            padding: 10px 40px
+    @media (max-width: 767px)
         .hero-content
             h1
                 font-size: 52px
@@ -30,4 +52,47 @@ section.hero
             h1
                 font-size: 36px
             h2
-                font-size: 17px
+                font-size: 18px
+            .contact-button
+                font-size: 15px
+.learnMore
+    text-align: center
+    margin-top: -80px
+    .learnMore-button
+        font-size: 18px
+        font-weight: normal
+        letter-spacing: 1px
+        color: #fff
+    .learnMore-arrow
+        margin-left: 37px
+        margin-top: 20px
+        position: absolute
+        width: 30px
+        height: 30px
+        border-left: 2px solid #fff
+        border-bottom: 2px solid #fff
+        transform: rotate(-45deg)
+        animation: sdb04 2s infinite
+        box-sizing: border-box
+    @-webkit-keyframes sdb04
+    	0%
+    		-webkit-transform: rotate(-45deg) translate(0, 0)
+    	20%
+    		-webkit-transform: rotate(-45deg) translate(-10px, 10px)
+    	40%
+    		-webkit-transform: rotate(-45deg) translate(0, 0)
+    @keyframes sdb04
+    	0%
+    		transform: rotate(-45deg) translate(0, 0)
+    	20%
+    		transform: rotate(-45deg) translate(-10px, 10px)
+    	40%
+    		transform: rotate(-45deg) translate(0, 0)
+@media (max-width: 412px)
+    .learnMore
+        .learnMore-button
+            font-size: 15px
+        .learnMore-arrow
+            margin-left: 30px
+            width: 25px
+            height: 25px
