--- a/assets/css/3-sections/hero.sass
+++ b/assets/css/3-sections/hero.sass
@@ -23,7 +23,7 @@ section.hero
             font-weight: lighter
             color: #fff
             text-align: center
-        .hero-buttons
+        .hero-button
             margin-top: 70px
         .contact-button
             font-size: 18px
@@ -62,26 +62,33 @@ section.hero
         font-size: 18px
         font-weight: normal
         letter-spacing: 1px
-        color: #fff
+        color: #d9d9d9
+        transition: all 0.3s ease-in-out
     .learnMore-arrow
         margin-left: 37px
         margin-top: 20px
         position: absolute
         width: 30px
         height: 30px
-        border-left: 2px solid #fff
-        border-bottom: 2px solid #fff
+        border-left: 2px solid #d9d9d9
+        border-bottom: 2px solid #d9d9d9
         transform: rotate(-45deg)
-        animation: sdb04 2s infinite
+        animation: bounce 2s infinite
         box-sizing: border-box
-    @-webkit-keyframes sdb04
+        transition: all 0.3s ease-in-out
+    .learnMore-button:hover
+        color: #fff
+        .learnMore-arrow
+            border-left: 2px solid #fff
+            border-bottom: 2px solid #fff
+    @-webkit-keyframes bounce
     	0%
     		-webkit-transform: rotate(-45deg) translate(0, 0)
     	20%
     		-webkit-transform: rotate(-45deg) translate(-10px, 10px)
     	40%
     		-webkit-transform: rotate(-45deg) translate(0, 0)
-    @keyframes sdb04
+    @keyframes bounce
     	0%
     		transform: rotate(-45deg) translate(0, 0)
     	20%
