--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -2,11 +2,11 @@
     <div class="hero-content">
         <h1>Hi, my name's Masami.</h1>
         <h2>I'm a web developer based in Berlin, Germany.</h2>
-        <div class="hero-buttons">
+        <div class="hero-button">
             <a href="#contact" class="contact-button">Get in touch!</a>
         </div>
     </div>
 </section>
 <div class="learnMore">
-    <a href="#about" class="learnMore-button"><span class="learnMore-arrow"></span>Learn More</a>
+    <a href="#about" class="learnMore-button"><span class="learnMore-arrow"></span>Learn more</a>
 </div>
