--- a/assets/css/1-base/_base.sass
+++ b/assets/css/1-base/_base.sass
@@ -21,8 +21,10 @@ h1, h2, h3, h4, h5, h6
   line-height: 1.2
 
 .bigger, h3
-  font-size: 26px
+  font-size: 38px
+  color: rgb(28, 38, 44)
   line-height: 1.38
+  text-align: center
 
 .big, h4
   font-size: 22px
@@ -36,6 +38,9 @@ h1, h2, h3, h4, h5, h6
 
 p
   margin: 0 0 20px 0
+  font-size: 17px
+  line-height: 1.4
+  letter-spacing: 0.4px
 
 em
   font-style: italic
@@ -93,3 +98,15 @@ body
   color: $text-color
   -webkit-font-smoothing: antialiased
   -webkit-text-size-adjust: 100%
+
+@media (max-width: 767px)
+    h3
+        font-size: 32px
+    p
+        font-size: 13px
+
+@media (max-width: 412px)
+    h3
+        font-size: 26px
+    p
+        font-size: 12px
