--- a/assets/css/4-layouts/home.sass
+++ b/assets/css/4-layouts/home.sass
@@ -1,9 +1,7 @@
-section
-    //padding: 50px 0
-
 .flex
     display: flex
     flex-direction: row
+    margin-top: 50px
 .flex-center
     justify-content: center
 .flex-around
@@ -12,14 +10,30 @@ section
     order: -1
 
 .col-1
+    display: flex
+    align-items: center
+    justify-content: center
     max-width: 300px
     margin: 0 10px
+    //background: pink
 .col-2
-    max-width: 1000px
-    margin: 0 30px
+    display: flex
+    align-items: center
+    justify-content: center
+    text-align: justify
+    max-width: 500px
+    margin: 0 10px
+    //background: pink
+.col-3
+    max-width: 820px
+    margin: 0 10px
 
 @media (max-width: 640px)
     .flex
         display: block
     .col-1
+        max-width: 100%
+    .col-2
+        max-width: 100%
+    .col-3
         max-width: 100%
