Services section layout, header, icons

--- a/assets/css/1-base/_base.sass
+++ b/assets/css/1-base/_base.sass
@@ -28,7 +28,9 @@ h1, h2, h3, h4, h5, h6
 
 .big, h4
   font-size: 22px
+  color: rgb(28, 38, 44)
   line-height: 1.38
+  text-align: center
 
 .small, small
   font-size: 10px
@@ -38,9 +40,10 @@ h1, h2, h3, h4, h5, h6
 
 p
   margin: 0 0 20px 0
-  font-size: 17px
-  line-height: 1.4
-  letter-spacing: 0.4px
+  color: rgb(96, 106, 116)
+  font-size: 15px
+  line-height: 1.5
+  letter-spacing: 0.5px
 
 em
   font-style: italic
@@ -102,11 +105,15 @@ body
 @media (max-width: 767px)
     h3
         font-size: 32px
+    h4
+        font-size: 18px
     p
         font-size: 13px
 
 @media (max-width: 412px)
     h3
         font-size: 26px
+    h4
+        font-size: 16px
     p
         font-size: 12px
