--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -433,7 +433,9 @@ h1, h2, h3, h4, h5, h6 {
 
 .big, h4 {
   font-size: 22px;
-  line-height: 1.38; }
+  color: #1c262c;
+  line-height: 1.38;
+  text-align: center; }
 
 .small, small {
   font-size: 10px;
@@ -441,9 +443,10 @@ h1, h2, h3, h4, h5, h6 {
 
 p {
   margin: 0 0 20px 0;
-  font-size: 17px;
-  line-height: 1.4;
-  letter-spacing: 0.4px; }
+  color: #606a74;
+  font-size: 15px;
+  line-height: 1.5;
+  letter-spacing: 0.5px; }
 
 em {
   font-style: italic; }
@@ -498,12 +501,16 @@ body {
 @media (max-width: 767px) {
   h3 {
     font-size: 32px; }
+  h4 {
+    font-size: 18px; }
   p {
     font-size: 13px; } }
 
 @media (max-width: 412px) {
   h3 {
     font-size: 26px; }
+  h4 {
+    font-size: 16px; }
   p {
     font-size: 12px; } }
 
@@ -698,6 +705,29 @@ section.about {
       margin: auto; }
     section.about .col-2 {
       margin: 35px auto; } }
+
+section.services {
+  margin-top: 80px; }
+  section.services .flex {
+    min-width: 80%; }
+  section.services .service-icon {
+    width: 90px; }
+  section.services h4 {
+    margin-bottom: 10px; }
+  section.services .col-1 {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+    margin: 0 30px; }
+  @media (max-width: 767px) {
+    section.services .col-1 {
+      margin: 0 20px; } }
+  @media (max-width: 640px) {
+    section.services .col-1 {
+      margin: 20px 15px; } }
 
 .flex {
   display: -webkit-box;
