Services section text, smooth scrolling

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -4,17 +4,17 @@
         <div class="col-1">
             <img class="service-icon" src="assets/img/design.png" alt="Web-Design">
             <h4>Web Design</h4>
-            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+            <p>I establish the key concepts of the project and design a <strong>responsive</strong> layout that will best facilitate the most important aspect of the web page, your <strong>content</strong>.</p>
         </div>
         <div class="col-1">
             <img class="service-icon" src="assets/img/front-end.png" alt="Front-end">
             <h4>Front-end Development</h4>
-            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+            <p>Whether I'm using front-end frameworks or coding the structure from scratch, <strong>usability</strong> and <strong>performance</strong> are what I keep in mind when developing client-side.</p>
         </div>
         <div class="col-1">
             <img class="service-icon" src="assets/img/back-end.png" alt="Back-end">
             <h4>Back-end Development</h4>
-            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+            <p>By using object oriented programming I keep my server-side scripting organized and <strong>reusable</strong> which makes maintaining and extending the web application easier.</p>
         </div>
     </div>
 </section>
