--- a/assets/css/3-sections/services.sass
+++ b/assets/css/3-sections/services.sass
@@ -1,21 +1,20 @@
 section.services
-    //display: flex
-    //flex-direction: row
-    //align-items: center
-    //justify-content: center
     margin-top: 80px
-    //background: pink
+    h3
+        margin: auto 10px
     .flex
         min-width: 80%
     .service-icon
         width: 90px
     h4
-        margin-bottom: 10px
+        margin-bottom: 20px
     .col-1
         flex-direction: column
         text-align: center
         margin: 0 30px
     @media (max-width: 767px)
+        .service-icon
+            width: 70px
         .col-1
             margin: 0 20px
     @media (max-width: 640px)
