--- a/assets/css/1-base/_base.sass
+++ b/assets/css/1-base/_base.sass
@@ -40,7 +40,7 @@ h1, h2, h3, h4, h5, h6
 
 p
   margin: 0 0 20px 0
-  color: rgb(96, 106, 116)
+  color: hsl(0, 0%, 57%)
   font-size: 15px
   line-height: 1.5
   letter-spacing: 0.5px
