--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -443,7 +443,7 @@ h1, h2, h3, h4, h5, h6 {
 
 p {
   margin: 0 0 20px 0;
-  color: #606a74;
+  color: #919191;
   font-size: 15px;
   line-height: 1.5;
   letter-spacing: 0.5px; }
@@ -708,12 +708,14 @@ section.about {
 
 section.services {
   margin-top: 80px; }
+  section.services h3 {
+    margin: auto 10px; }
   section.services .flex {
     min-width: 80%; }
   section.services .service-icon {
     width: 90px; }
   section.services h4 {
-    margin-bottom: 10px; }
+    margin-bottom: 20px; }
   section.services .col-1 {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -723,6 +725,8 @@ section.services {
     text-align: center;
     margin: 0 30px; }
   @media (max-width: 767px) {
+    section.services .service-icon {
+      width: 70px; }
     section.services .col-1 {
       margin: 0 20px; } }
   @media (max-width: 640px) {
