Tools section, grid

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,4 +1,4 @@
-<section class="about" id="about">
+<section class="about">
     <div class="about-content">
         <h3>A little bit about me...</h3>
         <div class="flex flex-center">
