--- a/_includes/services.html
+++ b/_includes/services.html
@@ -14,7 +14,7 @@
         <div class="col-1">
             <img class="service-icon" src="assets/img/back-end.png" alt="Back-end">
             <h4>Back-end Development</h4>
-            <p>By using object oriented programming I keep my server-side scripting organized and <strong>reusable</strong> which makes maintaining and extending the web application easier.</p>
+            <p>By using object oriented programming I keep my server-side scripts organized and <strong>reusable</strong> which make maintaining and extending parts of the application easier.</p>
         </div>
     </div>
 </section>
