--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -698,7 +698,7 @@ section.about {
 
 @media (max-width: 640px) {
   section.about {
-    padding: 40px 0 20px 0; }
+    padding: 30px 0 0px 0; }
     section.about .profile-pic {
       width: 150px; }
     section.about .col-1 {
@@ -707,7 +707,8 @@ section.about {
       margin: 35px auto; } }
 
 section.services {
-  margin-top: 80px; }
+  margin-top: 80px;
+  padding-bottom: 50px; }
   section.services h3 {
     margin: auto 10px; }
   section.services .flex {
@@ -724,14 +725,82 @@ section.services {
             flex-direction: column;
     text-align: center;
     margin: 0 30px; }
-  @media (max-width: 767px) {
-    section.services .service-icon {
-      width: 70px; }
-    section.services .col-1 {
-      margin: 0 20px; } }
-  @media (max-width: 640px) {
+
+@media (max-width: 767px) {
+  section.services .service-icon {
+    width: 70px; }
+  section.services .col-1 {
+    margin: 0 20px; } }
+
+@media (max-width: 640px) {
+  section.services {
+    margin-top: 50px;
+    padding-bottom: 40px; }
     section.services .col-1 {
       margin: 20px 15px; } }
+
+section.tools {
+  margin: 60px 0;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
+  section.tools .col-1 {
+    max-width: 240px;
+    margin-right: 100px; }
+  section.tools .tool-grid1 {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    max-width: 300px;
+    margin: 0; }
+  section.tools .icon-row {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    max-width: 300px; }
+  section.tools .tool-icon {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    width: 150px;
+    height: 100px;
+    border: 0.1px solid #cccccc; }
+
+@media (max-width: 640px) {
+  section.tools .tool-grid1 {
+    margin: 0 10px; }
+  section.tools .tool-grid2 {
+    margin: 0 10px; } }
 
 .flex {
   display: -webkit-box;
