--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Masami Okada </> Web Developer</title>
+        <title>Masami Okada | Web Developer</title>
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="assets/css/main.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
