--- a/assets/css/3-sections/services.sass
+++ b/assets/css/3-sections/services.sass
@@ -1,5 +1,6 @@
 section.services
     margin-top: 80px
+    padding-bottom: 50px
     h3
         margin: auto 10px
     .flex
@@ -12,11 +13,15 @@ section.services
         flex-direction: column
         text-align: center
         margin: 0 30px
-    @media (max-width: 767px)
+@media (max-width: 767px)
+    section.services
         .service-icon
             width: 70px
         .col-1
             margin: 0 20px
-    @media (max-width: 640px)
+@media (max-width: 640px)
+    section.services
+        margin-top: 50px
+        padding-bottom: 40px
         .col-1
             margin: 20px 15px
