--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,5 +8,6 @@
 @import "3-sections/hero";
 @import "3-sections/about";
 @import "3-sections/services";
+@import "3-sections/tools";
 
 @import "4-layouts/home";
