--- a/_includes/tools.html
+++ b/_includes/tools.html
@@ -3,41 +3,64 @@
         <div class="col-1">
             <h3>The tools that help me help you...</h3>
         </div>
-        <div class="tool-grid1">
+        <div class="tool-grid">
             <div class="icon-row">
-                <div class="tool-icon">icon</div>
-                <div class="tool-icon">icon</div>
+                <div class="icon-div">
+                    <img class="logo" src="assets/img/logos/HTML5.png" alt="HTML5" title="HTML5">
+                </div>
+                <div class="icon-div">
+                    <img class="logo" src="assets/img/logos/CSS3.svg" alt="CSS3" title="CSS3">
+                </div>
+                <div class="icon-div">
+                    <img class="logo" src="assets/img/logos/JavaScript.png" alt="JavaScript" title="JavaScript">
+                </div>
+                <div class="icon-div">
+                    <img class="logo-wide" src="assets/img/logos/jQuery.svg" alt="jQuery" title="jQuery">
+                </div>
             </div>
             <div class="icon-row">
-                <div class="tool-icon">icon</div>
-                <div class="tool-icon">icon</div>
+                <div class="icon-div">
+                    <img class="logo" src="assets/img/logos/Bootstrap.png" alt="Bootstrap" title="Bootstrap">
+                </div>
+                <div class="icon-div">
+                    <img class="logo" src="assets/img/logos/Sass.png" alt="Sass" title="Sass">
+                </div>
+                <div class="icon-div">
+                    <img class="logo-wide" src="assets/img/logos/jekyll.png" alt="jekyll" title="jekyll">
+                </div>
+                <div class="icon-div">
+                    <img class="logo" src="assets/img/logos/GitHub.png" alt="GitHub" title="GitHub">
+                </div>
             </div>
             <div class="icon-row">
-                <div class="tool-icon">icon</div>
-                <div class="tool-icon">icon</div>
+                <div class="icon-div">
+                    <img class="logo" src="assets/img/logos/Gulp.png" alt="Gulp" title="Gulp">
+                </div>
+                <div class="icon-div">
+                    <img class="logo" src="assets/img/logos/Git.png" alt="Git" title="Git">
+                </div>
+                <div class="icon-div">
+                    <img class="logo-wide" src="assets/img/logos/php.png" alt="php" title="php">
+                </div>
+                <div class="icon-div">
+                    <img class="logo-wide" src="assets/img/logos/Zend.png" alt="Zend" title="Zend">
+                </div>
             </div>
             <div class="icon-row">
-                <div class="tool-icon">icon</div>
-                <div class="tool-icon">icon</div>
+                <div class="icon-div">
+                    <img class="logo-wide" src="assets/img/logos/MySQL.png" alt="MySQL" title="MySQL">
+                </div>
+                <div class="icon-div">
+                    <img class="logo-wide" src="assets/img/logos/AJAX.png" alt="AJAX" title="AJAX">
+                </div>
+                <div class="icon-div">
+                    <img class="logo" src="assets/img/logos/JSON.png" alt="JSON" title="JSON">
+                </div>
+                <div class="icon-div">
+                    <img class="logo-wide" src="assets/img/logos/Python.svg" alt="Python" title="Python">
+                </div>
             </div>
         </div>
-        <div class="tool-grid1">
-            <div class="icon-row">
-                <div class="tool-icon">icon</div>
-                <div class="tool-icon">icon</div>
-            </div>
-            <div class="icon-row">
-                <div class="tool-icon">icon</div>
-                <div class="tool-icon">icon</div>
-            </div>
-            <div class="icon-row">
-                <div class="tool-icon">icon</div>
-                <div class="tool-icon">icon</div>
-            </div>
-            <div class="icon-row">
-                <div class="tool-icon">icon</div>
-                <div class="tool-icon">icon</div>
-            </div>
         </div>
     </div>
 </section>
