--- a/assets/css/3-sections/tools.sass
+++ b/assets/css/3-sections/tools.sass
@@ -1,31 +1,58 @@
 section.tools
-    margin: 60px 0
+    margin: 40px 0
+    padding: 30px 0 70px 0
     display: flex
     align-items: center
     justify-content: center
+    background: #f2f2f2
     .col-1
         max-width: 240px
+        margin-left: 15px
         margin-right: 100px
-    .tool-grid1
+    .tool-grid
         display: flex
+        align-items: center
+        justify-content: center
         flex-direction: column
-        max-width: 300px
-        margin: 0
+        max-width: 600px
+        margin-right: 15px
         //background: lightblue
     .icon-row
         display: flex
         flex-direction: row
-        max-width: 300px
-    .tool-icon
+        max-width: 600px
+    .icon-div
         display: flex
         align-items: center
         justify-content: center
         width: 150px
         height: 100px
-        border: 0.1px solid #cccccc
+        //border: 0.1px solid #cccccc
+        @media (max-width: 890px)
+            width: 110px
+        @media (max-width: 767px)
+            width: 100px
+            height: 80px
+        @media (max-width: 430px)
+            width: 78px
+            height: 78px
+    .logo
+        height: 60%
+        width: auto
+    .logo-wide
+        width: 60%
+        height: auto
+@media (max-width: 970px)
+    section.tools
+        .col-1
+            margin-right: 15px
 @media (max-width: 640px)
     section.tools
-        .tool-grid1
-            margin: 0 10px
-        .tool-grid2
-            margin: 0 10px
+        margin-top: 0px
+        .flex
+            margin-top: 0px
+        .col-1
+            max-width: none
+            margin: 0 15px
+        .tool-grid
+            margin: 0
