--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -791,6 +791,7 @@ section.tools {
             flex-direction: row;
     max-width: 600px; }
   section.tools .icon-div {
+    position: relative;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -822,6 +823,32 @@ section.tools {
   section.tools .logo-wide {
     width: 60%;
     height: auto; }
+  section.tools .overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    -webkit-transition: .5s ease;
+    transition: .5s ease;
+    background-color: #575859; }
+  section.tools .icon-div:hover .overlay {
+    opacity: 0.95; }
+  section.tools .tool-name {
+    color: white;
+    font-size: 18px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%); }
+    @media (max-width: 767px) {
+      section.tools .tool-name {
+        font-size: 14px; } }
 
 @media (max-width: 970px) {
   section.tools .col-1 {
@@ -837,6 +864,40 @@ section.tools {
       margin: 0 15px; }
     section.tools .tool-grid {
       margin: 0; } }
+
+section.experience {
+  margin-top: 80px; }
+  section.experience .col-1 {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+    margin-right: 50px; }
+    section.experience .col-1 p {
+      font-size: 13px;
+      margin-top: 10px; }
+  section.experience .quote {
+    margin-top: 25px; }
+  section.experience .palmberg-logo {
+    width: 270px;
+    height: auto; }
+  section.experience .col-2 {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+    -webkit-align-items: flex-start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    margin-left: 40px; }
 
 .flex {
   display: -webkit-box;
