--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -9,5 +9,6 @@
 @import "3-sections/about";
 @import "3-sections/services";
 @import "3-sections/tools";
+@import "3-sections/experience";
 
 @import "4-layouts/home";
